--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "axios": "^1.13.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "firebase": "^12.5.0",
     "firebase-admin": "^13.5.0",
